<?xml version="1.0" encoding="utf-8"?>
<resources xml:space="preserve">

    <string name="hello">Hello World, AndroidGame!</string>
    <string name="app_name">Bomberman</string>
    <string name="arcade">Arcade</string>
    <string name="number_rounds">Rounds:</string>
    <string name="game_type">Type:</string>
    <string name="next">Next</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="top">Top</string>
    <string name="achievements">Achievements</string>
    <string name="level_choose">Level Selection</string>
    <string name="help">\?</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connection">Connection:</string>
    <string name="protocol">Protocol:</string>
    <string name="role">Role:</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="searching_bt_devices">Searching bluetooth devices..</string>
    <string name="server_options">Server Options</string>
    <string name="ok">Start</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_multiplayer_title">Running a hotspot?</string>
    <string name="dialog_multiplayer_text">You don\'t seem to be connected to a network but we were able to get your local IP. This usually means you are running a hotspot in your device. If not, make sure your connection is working fine before proceeding! If you want to use the hotspot for this game, it\'s ok to proceed normally.</string>
    <string name="achievement_text_placeholder">Achievement name</string>
    <string name="achievement_progress_placeholder">1 out of 10</string>
        <string name="error_no_online_servers">There are no available public servers at the moment. Please try again later or start a new server yourself.</string>
    
    <string name="average_waiting_time">Average waiting time:</string>
    <string name="error_registration_ban">You have been temporarily banned from playing public games.Try again later</string>
      <string name="error_server_registration">Public registration server is down, please try again later.</string>
    <string name="error_serverconnection">Error connecting to master server! Please check your internet connection.</string>
     <string name="warning_router_tilte">Continue?</string>
        <string name="warning_router">It seems you\'re acessing internet from behind a router or proxy.\nRemember to configure it properly to forward request to the port you selected, or other players won\'t be able to connect..</string>
    <string name="top_country">Country</string>
    <string name="top_name">Name</string>
    <string name="top_points">Points</string>
    <string name="top_position">Rank</string>
    <string name="ip">Server IP:</string>
    <string name="port">Port:</string>
    
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="dialog_ask_client_public_text">Do you want to connect to a public or a private server?</string>
    <string name="dialog_ask_server_public_text">Do you want to create a public or private server?\nIf you choose Public a random player will be able to connect.</string>
    
     <string name="top_hosted">Top hosted by www.000webhost.com/</string>
     
    <string name="warn_failed_load_sounds_title">Warning :( !</string>
    <string name="warn_failed_load_sounds_text">The sounds failed to load for some reason!\nYou will still be able to play but without sound.</string>
    <string name="warn_bluetooth_title">Warning!</string>
    <string name="warn_bluetooth_text">Only the paired devices are shown as option.\nPlease make sure you paired your device with the server before continue.</string>
    <string name="error_wificonnection">Please connect to a network!</string>
    <string name="error_bluetoothconnection">Please turn on Bluetooth!</string>
    <string name="error_inactive_level">You haven\'t unlocked this level yet.</string>
    <string name="build_explosion">Explosion size</string>
    <string name="build_bombs">Simultaneous bombs</string>
    <string name="build_speed">Speed</string>
    <string name="build">Build</string>
    <string name="build_available_points">Available points:</string>
    <string name="achievement_monster_kills">Monster killed</string>
    <string name="achievement_player_kills">Players killed</string>
    <string name="achievement_dm_wins">Deathmatch wins</string>
    <string name="achievement_ctf_wins">Catch The Flag wins</string>
    <string name="achievement_time_played">Time played</string>
    <string name="achievement_completed_campaign">Completed Campaign</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username:</string>
    <string name="loading_progress">Loading. Please wait..</string>
    <string name="error_select_different_username">Username not available.Please select a different one.</string>
    <string name="error_connecting_to_top_server">Connection to server failed. Please try again later.</string>
    <string name="help_title">Help</string>
    <string name="help_subtitle_moving">Moving</string>
    <string name="help_description_moving">You can use the directional buttons on the bottom left corner of the screen to move your character. If you have keypad you can use  "A" – LEFT, "W" – UP, "D" – RIGHT, "S" or "Z" – DOWN </string>
    <string name="help_subtitle_bombs">Bombs</string>
    <string name="help_description_bombs">You can use the round button on the bottom right corner of the screen to place bombs near your character. If you have keypad you can use "SPACE_BAR" or "L"</string>
    <string name="help_subtitle_bonus">Bonus</string>
    <string name="help_description_bonus">At the bottom of the screen you can see the overall status of the bonus you caught. Those bonus refer to : Lives, Explosion size, Simultaneous bombs and Speed. Also, at the top right corner of the screen will be shown the temporary bonus such as Shield, Points Multiplier or the Bomb Pushing Gloves.</string>
    <string name="help_subtitle_campaign">Campaign Mode</string>
    <string name="help_description_campaign">This is a single player mode where you have to find the blue Portal somewhere below the destroyable objects. Once you kill all your enemies, the Portal starts flashing indicating you can go for it and proceed to the next level.</string>
    <string name="help_subtitle_ctf">Catch The Flag Mode</string>
    <string name="help_description_ctf">This is a multi player mode where you have to defend your flag. At the same time you have to go catch the enemy\'s flag and bring it back to your base. You can also play it as team versus team.</string>
    <string name="help_subtitle_dm">DeathMatch Mode</string>
    <string name="help_description_dm">This is a multi player mode where you simply have to kill your opponents. You can also play it as team versus team.</string>
    <string name="help_subtitle_bonus_actions">Bonus Actions</string>
    <string name="help_description_bonus_actions">1 - Let\'s you place more bombs simulatenously;\n2 - Gives you a temporary ability to push bombs;\n3 - Increases your lives;\n4 - Temporary shield;\n5 - Increases your speed;\n6 - Doubles the points you receive temporarily;\n7 - Increases the explosion size of your bombs.</string>
    <string name="help_subtitle_build">Build</string>
    <string name="help_description_build">In the build screen you can set your username which will be shown along with your score in the worldwide Top. You can also configure the "build" that will use in the multiplayer match. You do this by distributing the available points by the three abilities below. If you have no available points, you need to complete achievements (use the Achievements button in the main screen to check their status).</string>
    <string name="symbol_lesser">&lt;</string>
    <string name="symbol_first_page">&lt;|</string>
    <string name="symbol_greater">></string>
    <string name="bomber_champ">Congratulations, you are the BOMBER champion!!!</string>
    <string name="game_won">YOU WON!!!</string>
    <string name="game_lost">YOU LOST...</string>
    <string name="game_highscore">HIGH SCORE</string>
    <string name="game_time">TIME</string>
    <string name="game_final_score">FINAL SCORE</string>
    <string name="game_loading">Loading..</string>
    <string name="game_starts_in">Starts in\u0020</string>
    <string name="game_waiting_clients">Waiting for players.. </string>
    <string name="game_connect_to">Connect to -\u0020</string>
    <string name="game_connecting">Connecting..\u0020</string>
    <string name="game_score">SCORE:\u0020</string>
    <string name="game_round">Round\u0020</string>
    <string name="game_starts_in_lowercase">starts in\u0020</string>
    <string name="game_no_suficient_clients">No sufficient players..</string>
    <string name="game_error_connecting">Error connecting..</string>
    <string name="game_lost_client">Lost player..</string>
    <string name="game_lost_server">Lost server..</string>
    <string name="about">About</string>
    <string name="about_developed_by">Developed by:</string>
    <string name="about_avelino">Avelino Martins</string>
    <string name="about_filipe">Filipe Brandão</string>
    <string name="about_credits">Developed using libGDX library.\n\nCredits to HudsonSoft, authors of the original game art and sounds, and Yellow Icon Design, authors of the launcher icon.</string>
    <string name="deis_isec">DEIS-ISEC</string>
    <string name="tcp_recommended">TCP Recommended</string>
    <string name="multiplayer_help">Online Help</string>

</resources>