<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutAbout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_explode" >

    <TextView
        android:id="@+id/textAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutAbout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="40sp"
        android:background="#aa333333"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5sp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developed_by"
            android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:layout_margin="0sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_avelino"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="5sp" android:layout_margin="0sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_filipe"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_margin="0sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0sp"
            android:layout_marginTop="10sp"
            android:text="@string/deis_isec"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_credits"
            android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginTop="20sp" android:gravity="center" android:layout_margin="0sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_hosted"
            android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginTop="5sp" android:layout_margin="0sp"/>

    </LinearLayout>

</RelativeLayout>