<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/background_castle">

    <TextView
        android:id="@+id/textMultiplayerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/multiplayer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" android:layout_marginBottom="20sp"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#55ffffff" android:layout_below="@id/textMultiplayerTitle">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:weightSum="3" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="@string/connection"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioWifi"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/wifi" />

                <RadioButton
                    android:id="@+id/radioBluetooth"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bluetooth" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:weightSum="3" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="@string/role"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioClient"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/client" />

                <RadioButton
                    android:id="@+id/radioServer"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/server" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonOkDialogMultiplayer"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/menu_button"
        android:text="@string/ok"
        android:textSize="24sp"
        android:textStyle="bold" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>

</RelativeLayout>