<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_explode" >

    <TextView
        android:id="@+id/textHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/help_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/ButtonHelpRight"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="10sp"
        android:background="@drawable/menu_button_round"
        android:onClick="onRightButton"
        android:text="@string/symbol_greater"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonHelpLeft"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="10sp"
        android:background="@drawable/menu_button_round"
        android:onClick="onLeftButton"
        android:text="@string/symbol_lesser"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textHelpSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHelpTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/help_subtitle_moving"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textHelpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/help_description_moving"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageHelp"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:src="@drawable/help_move" android:layout_below="@id/textHelpSubtitle" android:layout_centerHorizontal="true"/>

</RelativeLayout>