<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_bomb"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_bomberman" android:layout_marginTop="20sp" android:layout_gravity="center_horizontal" android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:id="@+id/linearLayoutMainButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/menu_container"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="300sp"
            android:background="@drawable/menu_button_old"
            android:onClick="onArcadeButton"
            android:text="@string/arcade"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_weight="1" android:layout_marginTop="20sp" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Button02"
            android:layout_width="300sp"
            android:background="@drawable/menu_button_old"
            android:onClick="onMultiplayerButton"
            android:text="@string/multiplayer"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_weight="1" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Button03"
            android:layout_width="300sp"
            android:background="@drawable/menu_button_old"
            android:onClick="onTopButton"
            android:text="@string/top"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_weight="1" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Button04"
            android:layout_width="300sp"
            android:background="@drawable/menu_button_old"
            android:onClick="onAchievementsButton"
            android:text="@string/achievements"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_weight="1" android:layout_marginBottom="20sp" android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>
    